--- a/lectures/notebooks/notebook_MNIST_classification_MLP_CNN_students.ipynb
+++ b/lectures/notebooks/notebook_MNIST_classification_MLP_CNN_students.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/CIA-Oceanix/DLCourse_MOi_2022/blob/main/notebooks/notebook_MNIST_classification_MLP_CNN_students.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/CIA-Oceanix/DLOA2023/blob/main/lectures/notebooks/notebook_MNIST_classification_MLP_CNN_students.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -293,7 +293,7 @@
         "%matplotlib inline\n",
         "\n",
         "data_iter = iter(train_loader)\n",
-        "images, labels = data_iter.next()\n",
+        "images, labels = next(data_iter)\n",
         "images = images.numpy()\n",
         "fig = plt.figure(figsize=(25, 4))\n",
         "for idx in np.arange(20):\n",
@@ -379,7 +379,7 @@
         "import torch.nn as nn\n",
         "import torch.nn.functional as F\n",
         "\n",
-        "class MLP(nn.Module): \n",
+        "class MLP(nn.Module):\n",
         "    def __init__(self): # FUNCTION TO BE COMPLETED\n",
         "        super(MLP,self).__init__()\n",
         "        hidden_1, hidden_2 = 512, 256\n",
@@ -387,7 +387,7 @@
         "        self.fc2 = nn.Linear(hidden_1,hidden_2)\n",
         "        self.fc3 = nn.Linear(hidden_2,10)\n",
         "        self.dropout = nn.Dropout(0.2)\n",
-        "        \n",
+        "\n",
         "    def forward(self,x): # FUNCTION TO BE COMPLETED\n",
         "        x = x.view(-1,28*28)\n",
         "        x = F.relu(self.fc1(x))\n",
@@ -502,7 +502,7 @@
         "\n",
         "  for epoch in range(n_epochs):\n",
         "      train_loss, valid_loss = 0, 0\n",
-        "      \n",
+        "\n",
         "      model.train()\n",
         "      for data, label in train_loader:\n",
         "          data = data.to(device=device, dtype=torch.float32)\n",
@@ -513,7 +513,7 @@
         "          loss.backward()\n",
         "          optimizer.step()\n",
         "          train_loss += loss.item() * data.size(0)\n",
-        "      \n",
+        "\n",
         "      model.eval()\n",
         "      for data, label in valid_loader:\n",
         "          data = data.to(device=device, dtype=torch.float32)\n",
@@ -527,7 +527,7 @@
         "      valid_loss /= len(valid_loader.sampler)\n",
         "      train_losses.append(train_loss)\n",
         "      valid_losses.append(valid_loss)\n",
-        "      \n",
+        "\n",
         "      print('epoch: {} \\ttraining Loss: {:.6f} \\tvalidation Loss: {:.6f}'.format(epoch+1, train_loss, valid_loss))\n",
         "\n",
         "      if valid_loss <= valid_loss_min:\n",
@@ -536,8 +536,8 @@
         "          valid_loss))\n",
         "          torch.save(model.state_dict(), 'model.pt')\n",
         "          valid_loss_min = valid_loss\n",
-        "      \n",
-        "  return train_losses, valid_losses      "
+        "\n",
+        "  return train_losses, valid_losses"
       ]
     },
     {
@@ -900,7 +900,7 @@
         "\n",
         "    def __init__(self): # FUNCTION TO BE COMPLETED\n",
         "        super(CNN,self).__init__()\n",
-        "        \n",
+        "\n",
         "        self.conv1 = ###\n",
         "        self.relu1 = nn.ReLU()\n",
         "        self.conv2 = ####\n",
@@ -1016,7 +1016,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "w6LQ523QpmVY"
       },
@@ -1036,7 +1036,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "GvRvEpx4r3Ow"
       },
@@ -1091,7 +1091,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "xX3jtWoxsmmc"
       },
@@ -1111,7 +1111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "zczfDPAVvux_"
       },
@@ -1196,7 +1196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "WBzaFZDhvCid"
       },
@@ -1207,7 +1207,6 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "collapsed_sections": [],
       "provenance": [],
       "toc_visible": true,
       "include_colab_link": true
