--- a/lectures/notebooks/notebook_MNIST_classification_MLP_CNN_students.ipynb
+++ b/lectures/notebooks/notebook_MNIST_classification_MLP_CNN_students.ipynb
@@ -365,7 +365,10 @@
         "id": "U0TzO_b4L8ie"
       },
       "source": [
-        "#### **MLP architecture** - Define a MPL architecture with (at least) 2 fully-connected as well as dropout layers. <a class=\"anchor\" id=\"question_2_1\"></a>"
+        "#### **MLP architecture** - Define a MPL architecture with (at least) 2 fully-connected as well as dropout layers. <a class=\"anchor\" id=\"question_2_1\"></a>\n",
+        "- Step 1: test the proposed MLP architecture\n",
+        "- Step 2: remove the dropout layer and check the impact onto the results\n",
+        "- Step 3: test a MLP with only 1 hidden layer"
       ]
     },
     {
@@ -885,7 +888,7 @@
         "id": "3hBIkaLZqPT8"
       },
       "source": [
-        "#### **CNN architecture** - Define a CNN architecture using (at least) 2 patterns [CONV - CONV - POOL] as well as dropout and fully-connected layers. <a class=\"anchor\" id=\"question_3_1\"></a>"
+        "#### **CNN architecture** - Define a CNN architecture using (at least) 2 patterns [CONV - CONV - POOL] as well as dropout and fully-connected layers. <a class=\"anchor\" id=\"question_3_1\"></a>. Check https://pytorch.org/docs/stable/generated/torch.nn.Conv2d.html for the specification of convolutional layers"
       ]
     },
     {
